--- a/contenido/Principal/Principal.html
+++ b/contenido/Principal/Principal.html
@@ -14,7 +14,7 @@
     <!--CABECERO-->
     <!------------------------------------------------------------------------------------------------------------------------------->
     <header class="container-fluid d-flex justify-content-center" style="background-color: rgb(92, 92, 92);">
-        <p id="dorado" class="text-light mb-0 p-2 fs-5" style="color: #D4AF37; background-color: rgb(92, 92, 92);">Rosario De Cádiz</p>
+        <p class="text-light mb-0 p-2 fs-5" style=" background-color: rgb(92, 92, 92);">Rosario De Cádiz</p>
     </header>
 
     <!------------------------------------------------------------------------------------------------------------------------------->
@@ -36,27 +36,27 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                     <li class="nav-item">
-                        <a id="dorado" class="nav-link active text-info" aria-current="page" href="./principal.html"><strong>INICIO</strong></a>
+                        <a class="nav-link active text-dark" aria-current="page" href="./principal.html"><strong>INICIO</strong></a>
                     </li>
 
                     <li class="nav-item">
-                        <a id="dorado" class="nav-link" href="./formulario.html">Registrarse/Iniciar Sesion</a>
+                        <a class="nav-link" href="./formulario.html">Registrarse/Iniciar Sesion</a>
                     </li>
 
                     <li class="nav-item">
-                        <a id="dorado" class="nav-link" href="./usuarios/usuario1.html">Nuestra Historia</a>
+                        <a class="nav-link" href="./usuarios/usuario1.html">Nuestra Historia</a>
                     </li>
 
                     <li class="nav-item">
-                        <a id="dorado" class="nav-link" href="./usuarios/usuario2.html">Componentes</a>
+                        <a class="nav-link" href="./usuarios/usuario2.html">Componentes</a>
                     </li>
 
                     <li class="nav-item">
-                        <a id="dorado" class="nav-link" href="./usuarios/usuario2.html">Repertorio</a>
+                        <a class="nav-link" href="./usuarios/usuario2.html">Repertorio</a>
                     </li>
 
                     <li class="nav-item">
-                        <a id="dorado" class="nav-link" href="./usuarios/usuario2.html">Uniforme</a>
+                        <a class="nav-link" href="./usuarios/usuario2.html">Uniforme</a>
                     </li>
 
                     <li class="nav-item">
@@ -66,17 +66,69 @@
                     <li class="nav-item">
                         <a id="dorado" class="nav-link" href="./usuarios/usuario2.html">Semana Santa</a>
                     </li>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="email">
-                        <button class="btn btn-danger btn-danger-outline btn-outline-success text-white" type="button">Buscar</button>
-                    </form>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!---->
-    <!---->
+    <!--CARRUSEL-->
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="/contenido/img/carrusel1.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/contenido/img/carrusel2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/contenido/img/carrusel3.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+    <!--TARJETAS-->
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Diego Jimenez</h5>
+              <p class="card-text">Director Musical de Rosario de Cádiz. Teléfono: 603567854</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Manuel López</h5>
+              <p class="card-text">Hermano mayor de la hermandad Nuestras Señora del Rosario Coronada, Patrona y Alcaldesa Perpetua de la ciudad de Cádiz</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Leandro Barba</h5>
+              <p class="card-text">Director de la banda de Rosario de Cádiz. Teléfono: 985754865</p>
+            </div>
+          </div>
+        </div>
+      </div>
     <!---->
 
 </body>
