Realizando vista de Productos

--- a/contenido/Principal/Principal.html
+++ b/contenido/Principal/Principal.html
@@ -40,11 +40,11 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="./formulario.html">Registrarse/Iniciar Sesion</a>
+                        <a class="nav-link" href="./formulario.html">Iniciar Sesion</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="./usuarios/usuario1.html">Nuestra Historia</a>
+                        <a class="nav-link" href="./usuarios/usuario1.html">Quienes Somos</a>
                     </li>
 
                     <li class="nav-item">
@@ -56,7 +56,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="./usuarios/usuario2.html">Uniforme</a>
+                        <a class="nav-link" href="./usuarios/usuario2.html">Productos</a>
                     </li>
 
                     <li class="nav-item">
